updated the admin dashboard

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="/index.html" class="nav-link">Home</a></li>
       <li><a href="/menu.html" class="nav-link">Menu</a></li>
       <li><a href="/reservation.html" class="nav-link">Reserve</a></li>
-      <li><a href="/admin/dashboard.html" class="nav-link">Admin</a></li>
+      <li><a href="/admin/login.html" class="nav-link">Admin</a></li>
     </ul>
     <button class="nav-toggle">
       <span class="hamburger"></span>
